--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ packages = [{include = "automated_logging"}]
 
 [tool.poetry.dependencies]
 python = ">=3.6, <4"
-django = "^3.0 || ^2.2 || ^3.1 || ^3.2"
+django = "^3.0 || ^2.2 || ^3.1 || ^3.2 || ^4.1 || ^4.2"
 marshmallow = "^3.6.1"
 django-picklefield = "^3.0.1"
 django-ipware = "^3.0.0"
